// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add versions for independent packages 1`] = `
"#### 💥 Breaking Change

- woot [#12343](https://github.custom.com/pull/12343) (adam@dierkens.com)
- \`@foobar/release@1.0.1\`, \`@foobar/party@1.0.3\`
  - [PLAYA-5052] - Some Feature [#12345](https://github.custom.com/pull/12345) (adam@dierkens.com)
  - [PLAYA-5052] - Some Feature - Revert [#12345](https://github.custom.com/pull/12345) (adam@dierkens.com)

#### 🏠 Internal

- \`@foobar/release@1.0.1\`
  - Another Feature [#1234](https://github.custom.com/pull/1234) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`should be able to disable sections for packages 1`] = `
"#### 💥 Breaking Change

- [PLAYA-5052] - Some Feature [#12345](https://github.custom.com/pull/12345) (adam@dierkens.com)
- [PLAYA-5052] - Some Feature - Revert [#12345](https://github.custom.com/pull/12345) (adam@dierkens.com)
- woot [#12343](https://github.custom.com/pull/12343) (adam@dierkens.com)

#### 🏠 Internal

- Another Feature [#1234](https://github.custom.com/pull/1234) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`should create sections for packages 1`] = `
"#### 💥 Breaking Change

- woot [#12343](https://github.custom.com/pull/12343) (adam@dierkens.com)
- \`@foobar/party\`
  - [PLAYA-5052] - Some Feature [#12345](https://github.custom.com/pull/12345) (adam@dierkens.com)
- \`@foobar/release\`
  - [PLAYA-5052] - Some Feature - Revert [#12345](https://github.custom.com/pull/12345) (adam@dierkens.com)

#### 🏠 Internal

- \`@foobar/release\`
  - Another Feature [#1234](https://github.custom.com/pull/1234) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;

exports[`should group sections for packages 1`] = `
"#### 💥 Breaking Change

- woot [#12343](https://github.custom.com/pull/12343) (adam@dierkens.com)
- \`@foobar/release\`, \`@foobar/party\`
  - [PLAYA-5052] - Some Feature [#12345](https://github.custom.com/pull/12345) (adam@dierkens.com)
  - [PLAYA-5052] - Some Feature - Revert [#12345](https://github.custom.com/pull/12345) (adam@dierkens.com)

#### 🏠 Internal

- \`@foobar/release\`
  - Another Feature [#1234](https://github.custom.com/pull/1234) (adam@dierkens.com)

#### Authors: 1

- Adam Dierkens (adam@dierkens.com)"
`;
